Corrected alignment in canvas view

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ div.left {
 
 div.right {
     display: inline-block;
-    float: right;
+    float: left;
     padding-left: 10px;
 }
 
